--- a/packages/dendron-next-server/package.json
+++ b/packages/dendron-next-server/package.json
@@ -16,7 +16,7 @@
     "dev": "next dev",
     "prod": "env STAGE=prod next dev",
     "watch": "echo 0",
-    "buildCI": "echo nop",
+    "buildCI": "yarn build",
     "build": "yarn setup && yarn build:dev",
     "build:dev": "cross-env CDN_BUILD=1 STAGE=dev next build && next export",
     "build:prod": "cross-env CDN_BUILD=1 STAGE=prod next build && next export",
