--- a/.github/workflows/proto.yml
+++ b/.github/workflows/proto.yml
@@ -11,28 +11,28 @@ jobs:
 
       matrix:
         os:
-          # - macos-latest
+          - macos-latest
           - ubuntu-latest
-          # - windows-latest
+          - windows-latest
         node-version:
           - 12.x
-          # - 14.x
+          - 14.x
         suite:
           - cli
-          # - plugin
+          - plugin
 
         include:
-          # - os: macos-latest
-          #   env: env
-          #   versions: ""
+          - os: macos-latest
+            env: env
+            versions: ""
           - os: ubuntu-latest
             env: env
             versions: ""
           # Running natively under Windows requires some further work on paths
           # and file access patterns.
-          # - os: windows-latest
-          #   env: Get-ChildItem Env:\
-          #   versions: choco --version
+          - os: windows-latest
+            env: Get-ChildItem Env:\
+            versions: choco --version
 
     timeout-minutes: 40
 
