chore(build): speed up build process (#2308)
This change has several build optimizations that dramatically speed up the build process (~ >50%)

    instead of running build on bootstrap, introducebuildCI which skips clean and format of all repositories before build (this forces us to do a re-install of all packages despite loading from cache)
        NOTE: we still run a clean in plugin-core and engine-test-utils to make sure we clean up tests that have been deleted
    better caching of node modules
        upgrade setup-node action from v1 to v2
        cache node_modules based on top level yarn.lock
    enable typescript incremental build
    cache typescript compilation between builds using actions/cache@v2
    removal of frontend frameworks that are not being tested (eg. dendron-plugin-views, dendron-next-server)

Some rough benchmarks:

    total CI time:
        before: 30min - 50min
        after: 20min

    install + build:

        before:
            linux: 7min - 8min
            mac: 12min - 15min
            windows: 9min - 12min

        after (install):
            linux: 1min 5s - 1min 24s
            mac: 2min 35s - 3min
            windows: 2min 48s - 3min37

        after (build):
            linux: 2min 8s - 2min 28s
            mac: 3min 28s - 2min 39s
            windows: 3min 55s - 3min 3s

        after (total):
            linux: 3min - 4min
            mac: 6min
            windows: 6min - 7min

    more details in [[Lerna Optimizations|dendron://private/task.2022.01.27.lerna-optimizations]]

Future work:

    windows continues to be our slowest platform but the remainder of the gains will be made by fixing our tests which today are not deterministic and can hang across various test suites

--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -26,7 +26,8 @@
     "prepublishOnly": "yarn build",
     "prebuild": "yarn clean && yarn format && yarn lint && echo Using TypeScript && tsc --version",
     "build": "yarn compile",
-    "compile": "tsc -p tsconfig.build.json",
+    "buildCI": "yarn compile",
+    "compile": "tsc -b tsconfig.build.json --verbose",
     "test": "echo stub",
     "coverage": "echo no-op",
     "watch": "yarn compile --watch",
