--- a/packages/common-all/package.json
+++ b/packages/common-all/package.json
@@ -28,7 +28,8 @@
     "prepublishOnly": "yarn build",
     "prebuild": "yarn clean && yarn format && yarn lint && echo Using TypeScript && tsc --version",
     "build": "yarn compile",
-    "compile": "tsc -p tsconfig.build.json",
+    "buildCI": "yarn compile",
+    "compile": "tsc -b tsconfig.build.json --verbose",
     "test": "echo 0",
     "watch": "yarn compile --watch",
     "test:unit": "echo 0",
