--- a/packages/common-server/package.json
+++ b/packages/common-server/package.json
@@ -29,7 +29,8 @@
     "prepublishOnly": "yarn build",
     "prebuild": "yarn clean && yarn format && yarn lint && echo Using TypeScript && tsc --version",
     "build": "yarn compile",
-    "compile": "tsc -p tsconfig.build.json",
+    "buildCI": "yarn compile",
+    "compile": "tsc -b tsconfig.build.json --verbose",
     "test": "echo nop",
     "coverage": "echo nop",
     "watch": "yarn compile --watch",
