fix(pod): acknowledge cli args for publish pod

--- a/packages/dendron-cli/.vscode/tasks.json
+++ b/packages/dendron-cli/.vscode/tasks.json
@@ -67,6 +67,15 @@
         "cwd": "D:/dendron_setup/dendron/"
       },
       "problemMatcher": []
+    },
+    {
+      "label": "publish-pod",
+      "type": "shell",
+      "command": "node --inspect dendron/packages/dendron-cli/lib/bin/dendron-cli publishPod --wsRoot ${workspaceFolder}/../../test-workspace --podId dendron.markdown --vault vault --query root --podSource builtin",
+      "options": {
+        "cwd": "E:/dendron-code/"
+      },
+      "problemMatcher": []
     }
   ]
 }
