chore(publish): Add support for playwright e2e testing for nextjs template
- Setup playwright for nextjs-template (see example.spec.ts)
- Modify github actions to run playwright tests (only for ubuntu)

See [[Add Playwright Tests to Nextjs Template|dendron://private/task.2022.01.31.add-playwright-tests-to-nextjs-template#^svh9KaR8Cxi7]]

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,13 +114,13 @@ jobs:
           unzip dendron-site.zip -d packages/nextjs-template
           pwd
 
-      - name: Run cypress
+      - name: Install Playwright dependencies
         if: runner.os == 'Linux'
-        uses: cypress-io/github-action@v2
-        with:
-          build: "yarn run template:export"
-          start: "yarn run template:start"
-          project: ./packages/nextjs-template
+        run: npx playwright install --with-deps
+
+      - name: Run Playwright tests
+        if: runner.os == 'Linux'
+        run: yarn ci:test:template
 
       - name: Run tests
         run: yarn ci:test:${{ matrix.suite }}
