--- a/package.json
+++ b/package.json
@@ -93,8 +93,9 @@
     "bootstrap:build:dendron-cli": "yarn bootstrap:build: @dendronhq/dendron-cli",
     "bootstrap:init": "yarn bootstrap:bootstrap && yarn bootstrap:build",
     "ci:init": "yarn bootstrap:bootstrap && yarn bootstrap:build",
-    "ci:test:cli": "npx lerna run test --ignore @dendronhq/plugin-core --parallel --stream -- -- --forceExit",
+    "ci:test:cli": "npx lerna run test --ignore @dendronhq/plugin-core --ignore @dendronhq/nextjs-template --parallel --stream -- -- --forceExit",
     "ci:test:plugin": "npx lerna run test --scope @dendronhq/plugin-core --stream",
+    "ci:test:template": "yarn --cwd packages/nextjs-template run test",
     "template:build": "yarn --cwd packages/nextjs-template run build",
     "template:export": "yarn --cwd packages/nextjs-template run export",
     "template:start": "yarn --cwd packages/nextjs-template run start",
