--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -27,7 +27,7 @@
     "prebuild": "yarn clean && yarn format && yarn lint && echo Using TypeScript && tsc --version",
     "build": "yarn compile",
     "buildCI": "yarn compile",
-    "compile": "tsc -b tsconfig.build.json --verbose",
+    "compile": "tsc -p tsconfig.build.json ",
     "test": "echo stub",
     "coverage": "echo no-op",
     "watch": "yarn compile --watch",
