--- a/packages/common-server/package.json
+++ b/packages/common-server/package.json
@@ -30,7 +30,7 @@
     "prebuild": "yarn clean && yarn format && yarn lint && echo Using TypeScript && tsc --version",
     "build": "yarn compile",
     "buildCI": "yarn compile",
-    "compile": "tsc -b tsconfig.build.json --verbose",
+    "compile": "tsc -p tsconfig.build.json ",
     "test": "echo nop",
     "coverage": "echo nop",
     "watch": "yarn compile --watch",
