chore: remove 11ty as dependency
BREAKING: this removes `buildSite` and `buildSiteV2` from dendron core

--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
       "packages/dendron-next-server",
       "packages/nextjs-template",
       "packages/plugin-core",
-      "packages/dendron-11ty",
       "packages/common-frontend",
       "packages/dendron-plugin-views"
     ],
@@ -70,10 +69,10 @@
     "dendron": "node packages/dendron-cli/lib/bin/dendron-cli.js",
     "cleanup": "./bootstrap/scripts/cleanup.sh",
     "release": "standard-version",
-    "format": "lerna exec --parallel --ignore @dendronhq/dendron-11ty-legacy -- yarn format",
+    "format": "lerna exec --parallel -- yarn format",
     "format:pkg": "prettier --write",
     "lint": "eslint . --ext ts,tsx",
-    "lerna:typecheck": "lerna exec --parallel --ignore @dendronhq/dendron-next-server --ignore @dendronhq/common-assets --ignore @dendronhq/nextjs-template --ignore @dendronhq/dendron-11ty-legacy --ignore @dendronhq/dendron-plugin-views -- tsc -p tsconfig.build.json --noEmit",
+    "lerna:typecheck": "lerna exec --parallel --ignore @dendronhq/dendron-next-server --ignore @dendronhq/common-assets --ignore @dendronhq/nextjs-template --ignore @dendronhq/dendron-plugin-views -- tsc -p tsconfig.build.json --noEmit",
     "bootstrap:bootstrap": "npx yarn --network-timeout 600000 --frozen-lockfile && yarn gen:meta",
     "bootstrap:build": "node bootstrap/scripts/buildAll.js",
     "bootstrap:buildCI": "node bootstrap/scripts/buildAllForTest.js",
