chore: update dendron.yml for test-workspace

--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -1,114 +1,130 @@
-version: 4
-site:
-  copyAssets: true
-  siteHierarchies:
-    - dendron
-    - bar
-    - tags
-  siteRootDir: docs
-  logo: vault/assets/images/logo.png
-  siteFaviconPath: vault/assets/images/favicon.ico
-  siteUrl: "https://foo.dev.dendron.so"
-  usePrettyRefs: true
-  githubCname: 11ty.dendron.so
-  usePrettyLinks: true
-  siteLastModified: true
-  title: Dendron
-  description: >-
-    Dendron is a local-first, markdown based, hierarchical note taking tool.
-    It is meant to help you create, organize, and collaborate on knowledge
-    bases of any size.
-  author: Kevin
-  twitter: kevins8
-  customHeaderPath: header.html
-  gh_edit_link: true
-  gh_edit_link_text: Edit this page on Github
-  gh_edit_repository: "https://github.com/kevinslin/dendron-11ty-test"
-  gh_edit_branch: main
-  gh_edit_view_mode: edit
-  duplicateNoteBehavior:
-    action: useVault
-    payload:
-      - vault2
-      - vault
-      - vault2
-      - vaultThree
-      - vaultThree
+version: 5
 dev:
-  enableWebUI: true
-  enablePreviewV2: true
-  enableExportPodV2: true
+    enableWebUI: true
+    enablePreviewV2: true
+    enableExportPodV2: true
 commands:
-  lookup:
-    note:
-      selectionMode: extract
-      confirmVaultOnCreate: true
-      leaveTrace: false
-      bubbleUpCreateNew: true
-  insertNote:
-    initialValue: templates
-  insertNoteLink:
-    aliasMode: none
-    enableMultiSelect: false
-  insertNoteIndex:
-    enableMarker: false
-  randomNote: {}
+    lookup:
+        note:
+            selectionMode: extract
+            confirmVaultOnCreate: true
+            leaveTrace: false
+            bubbleUpCreateNew: true
+            vaultSelectionModeOnCreate: smart
+            fuzzThreshold: 0.2
+    insertNote:
+        initialValue: templates
+    insertNoteLink:
+        aliasMode: none
+        enableMultiSelect: false
+    insertNoteIndex:
+        enableMarker: false
+    randomNote: {}
 workspace:
-  dendronVersion: 0.70.0
-  vaults:
-    - fsPath: vault3
-      name: vaultThree
-    - fsPath: vault2
-      visibility: private
-    - fsPath: vault
-    - fsPath: assets
-  journal:
-    dailyDomain: daily
-    name: journal
-    dateFormat: y.MM.dd
-    addBehavior: childOfCurrent
-  scratch:
-    name: scratch
-    dateFormat: y.MM.dd.HHmmss
-    addBehavior: asOwnDomain
-  graph:
-    zoomSpeed: 1
-  enableAutoCreateOnDefinition: false
-  enableXVaultWikiLink: false
-  enableRemoteVaultInit: true
-  workspaceVaultSyncMode: noCommit
-  enableAutoFoldFrontmatter: true
-  maxPreviewsCached: 10
-  maxNoteLength: 204800
-  task:
-    name: ""
-    dateFormat: ""
-    addBehavior: childOfCurrent
-    statusSymbols:
-      "": " "
-      wip: w
-      done: x
-      assigned: a
-      moved: m
-      blocked: b
-      delegated: l
-      dropped: d
-      pending: "y"
-    prioritySymbols:
-      H: high
-      M: medium
-      L: low
-    todoIntegration: false
-    createTaskSelectionType: selection2link
-  enableUserTags: true
-  enableHashTags: true
-useFMTitle: true
-useNoteTitleForLink: true
-mermaid: true
-useKatex: true
+    dendronVersion: 0.82.0
+    vaults:
+        -
+            fsPath: vault3
+            name: vaultThree
+        -
+            fsPath: vault2
+            visibility: private
+        -
+            fsPath: vault
+        -
+            fsPath: assets
+    journal:
+        dailyDomain: daily
+        name: journal
+        dateFormat: y.MM.dd
+        addBehavior: childOfCurrent
+    scratch:
+        name: scratch
+        dateFormat: y.MM.dd.HHmmss
+        addBehavior: asOwnDomain
+    graph:
+        zoomSpeed: 1
+    enableAutoCreateOnDefinition: false
+    enableXVaultWikiLink: false
+    enableRemoteVaultInit: true
+    workspaceVaultSyncMode: noCommit
+    enableAutoFoldFrontmatter: true
+    maxPreviewsCached: 10
+    maxNoteLength: 204800
+    task:
+        name: ''
+        dateFormat: ''
+        addBehavior: childOfCurrent
+        statusSymbols:
+            '': ' '
+            wip: w
+            done: x
+            assigned: a
+            moved: m
+            blocked: b
+            delegated: l
+            dropped: d
+            pending: 'y'
+        prioritySymbols:
+            H: high
+            M: medium
+            L: low
+        todoIntegration: false
+        createTaskSelectionType: selection2link
+    enableUserTags: true
+    enableHashTags: true
+    enableEditorDecorations: true
 preview:
-  enableFMTitle: true
-  enableNoteTitleForLink: true
-  enableMermaid: true
-  enablePrettyRefs: true
-  enableKatex: true
+    enableFMTitle: true
+    enableNoteTitleForLink: true
+    enableMermaid: true
+    enablePrettyRefs: true
+    enableKatex: true
+    automaticallyShowPreview: false
+publishing:
+    enableFMTitle: true
+    enableNoteTitleForLink: true
+    enableMermaid: true
+    enablePrettyRefs: true
+    enableKatex: true
+    copyAssets: true
+    customHeaderPath: header.html
+    logoPath: vault/assets/images/logo.png
+    siteFaviconPath: vault/assets/images/favicon.ico
+    siteHierarchies:
+        - dendron
+        - bar
+        - tags
+    enableSiteLastModified: true
+    siteRootDir: docs
+    siteUrl: 'https://foo.dev.dendron.so'
+    enableFrontmatterTags: true
+    enableHashesForFMTags: false
+    enableRandomlyColoredTags: true
+    duplicateNoteBehavior:
+        action: useVault
+        payload:
+            - vault2
+            - vault
+            - vault2
+            - vaultThree
+            - vaultThree
+    writeStubs: false
+    seo:
+        title: Dendron
+        description: >-
+            Dendron is a local-first, markdown based, hierarchical note taking
+            tool. It is meant to help you create, organize, and collaborate on
+            knowledge bases of any size.
+        author: Kevin
+        twitter: kevins8
+    github:
+        cname: 11ty.dendron.so
+        enableEditLink: true
+        editLinkText: Edit this page on Github
+        editBranch: main
+        editViewMode: edit
+        editRepository: 'https://github.com/kevinslin/dendron-11ty-test'
+    enableContainers: false
+    generateChangelog: false
+    enablePrettyLinks: true
