master branch fixups

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
       "packages/dendron-plugin-views"
     ],
     "nohoist": [
-      "**/@types/mocha"
+      "**/@types/mocha",
+      "**/@types/eslint"
     ]
   },
   "devDependencies": {
