--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -35,7 +35,7 @@
     "lodash": "^4.17.21",
     "next": "12",
     "next-seo": "^4.27.0",
-    "next-sitemap": "^1.6.168",
+    "next-sitemap": "1.8.11",
     "react": "^17.0.2",
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^17.0.2",
