--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -21,12 +21,14 @@ commands:
     insertNoteIndex:
         enableMarker: false
     randomNote: {}
+    copyNoteLink: {}
 workspace:
     dendronVersion: 0.82.0
     vaults:
         -
-            fsPath: vault3
-            name: vaultThree
+            fsPath: dependencies/localhost/vault3
+            selfContained: true
+            name: vault3
         -
             fsPath: vault2
             visibility: private
@@ -82,6 +84,8 @@ preview:
     enablePrettyRefs: true
     enableKatex: true
     automaticallyShowPreview: false
+    enableFrontmatterTags: true
+    enableHashesForFMTags: false
 publishing:
     enableFMTitle: true
     enableNoteTitleForLink: true
@@ -110,6 +114,7 @@ publishing:
             - vault2
             - vaultThree
             - vaultThree
+            - vault3
     writeStubs: false
     seo:
         title: Dendron
