--- a/packages/engine-server/package.json
+++ b/packages/engine-server/package.json
@@ -43,17 +43,6 @@
     "@dendronhq/remark-mermaid": "^0.2.0",
     "@jcoreio/async-throttle": "^1.4.3",
     "@mapbox/rehype-prism": "^0.5.0",
-    "@types/fs-extra": "^9.0.1",
-    "@types/klaw": "^3.0.1",
-    "@types/lodash": "^4.14.156",
-    "@types/mdast": "^3.0.3",
-    "@types/node": "13.11.0",
-    "@types/pino": "^6.3.0",
-    "@types/remark-abbr": "^1.4.0",
-    "@types/spark-md5": "^3.0.2",
-    "@types/through2": "^2.0.36",
-    "@types/unist": "^2.0.3",
-    "@types/yamljs": "^0.2.31",
     "axios": "^0.21.1",
     "chokidar": "^3.5.2",
     "cross-path-sort": "^1.0.0",
@@ -93,12 +82,21 @@
     "unified-engine": "^8.0.0",
     "unist-util-select": "^3.0.1",
     "unist-util-visit": "^2.0.3",
-    "vscode-uri": "^2.1.2",
-    "yamljs": "^0.3.0"
+    "vscode-uri": "^2.1.2"
   },
   "devDependencies": {
     "@types/execa": "^2.0.0",
     "@types/lru-cache": "^5.1.1",
+    "@types/fs-extra": "^9.0.1",
+    "@types/klaw": "^3.0.1",
+    "@types/lodash": "^4.14.156",
+    "@types/mdast": "^3.0.3",
+    "@types/node": "13.11.0",
+    "@types/pino": "^6.3.0",
+    "@types/remark-abbr": "^1.4.0",
+    "@types/spark-md5": "^3.0.2",
+    "@types/through2": "^2.0.36",
+    "@types/unist": "^2.0.3",
     "coveralls": "^3.0.2",
     "cross-env": "^7.0.2",
     "rimraf": "^2.6.2",
