--- a/.github/workflows/publish-extension-dendron-patch.yml
+++ b/.github/workflows/publish-extension-dendron-patch.yml
@@ -1,8 +1,8 @@
-# Builds and publishes the release. This will publish packages to npm and
-# publish the release extension to the VS Code and Open VSX Marketplaces. This
-# is manually triggered once the release build is smoke-tested and ready for
-# release.
-name: Publish Extension - Dendron
+# Builds and publishes a release as a patch version incrementation. This will
+# publish packages to npm and publish the release extension to the VS Code and
+# Open VSX Marketplaces. This is manually triggered once the release build is
+# smoke-tested and ready for release.
+name: Publish Extension - Dendron - Patch Release
 
 on: workflow_dispatch
 
@@ -38,7 +38,7 @@ jobs:
 
       - name: Set Environment Variables
         run: |
-          echo "DENDRON_RELEASE_VERSION=`cat ./packages/plugin-core/package.json | jq ".version" -r | awk -F. -v OFS=. 'NF>1{$(NF-1)=sprintf("%0*d", length($(NF-1)), ($(NF-1)+1)); $NF=0; print}'`" >> $GITHUB_ENV
+          echo "DENDRON_RELEASE_VERSION=`cat ./packages/plugin-core/package.json | jq ".version" -r | awk -F. -v OFS=. 'NF==1{print ++$NF}; NF>1{$NF=sprintf("%0*d", length($NF), ($NF+1)); print}'`" >> $GITHUB_ENV
           echo "GOOGLE_OAUTH_CLIENT_SECRET=${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}" >> $GITHUB_ENV
           echo "GOOGLE_OAUTH_CLIENT_ID=${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}" >> $GITHUB_ENV
           echo "SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}" >> $GITHUB_ENV
@@ -61,7 +61,7 @@ jobs:
         run: |
           echo "VSIX_FILE_NAME=dendron-${{ env.DENDRON_RELEASE_VERSION }}.vsix" >> $GITHUB_ENV
           echo "VSIX_RELATIVE_PATH=./packages/plugin-core/dendron-${{ env.DENDRON_RELEASE_VERSION }}.vsix" >> $GITHUB_ENV
-          yarn build:minor:remote:ci
+          yarn build:patch:remote:ci
 
       - name: Upload VSIX Artifact
         uses: actions/upload-artifact@v2
