enhance: initialize workspace can create self contained vaults (#2569)
* initialize workspace creates self contained vaults

* add tests & refactor existing tests & allow tests to create self contained vaults

* CLI vault create supports self contained vaults

* fix tests failing due to timeout issues

* fix tests & snapshots

* Remove debugger

* fix broken plugin tests

* Merge origin/master

* implement feedback

* fix broken tests

* drop `ExtensionProvider.isRegistred`, move `getWorkspaceConfig` to `VSCodeUtils`

* merge origin/master

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -929,6 +929,11 @@
           "type": "boolean",
           "default": false,
           "description": "When enabled, Dendron will watch non-Dendron workspaces to detect when one is created, and will automatically initialize itself. Otherwise, you may need to reload VSCode after creating a native workspace."
+        },
+        "dendron.enableSelfContainedVaultWorkspace": {
+          "type": "boolean",
+          "default": false,
+          "description": "When enabled, newly created workspaces will be created as self contained vaults. This is an experimental feature."
         }
       }
     },
